fix(navbar): update z-index for dropdown menu to ensure proper stacking

--- a/src/sass/layouts/_navbar.scss
+++ b/src/sass/layouts/_navbar.scss
@@ -160,7 +160,7 @@
   }
 
   &__dropdown-menu {
-    z-index: $z-index-navbar-dropdown;
+    z-index: 50;
     top: 4.4rem;
     display: none;
     padding: 1rem;
